After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 772443 - Wrong extension when exporting anything that's not JPEG or PNG
Wrong extension when exporting anything that's not JPEG or PNG
Status: RESOLVED FIXED
Product: gnome-photos
Classification: Applications
Component: general
3.20.x
Other All
: Normal normal
: ---
Assigned To: GNOME photos maintainer(s)
GNOME photos maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-10-05 09:12 UTC by Debarshi Ray
Modified: 2016-10-06 09:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
base-item: Adjust the extension when exporting (2.01 KB, patch)
2016-10-05 09:20 UTC, Debarshi Ray
committed Details | Review

Description Debarshi Ray 2016-10-05 09:12:03 UTC
Anything that's not a JPEG or PNG (say a RAW image) retains its original extension even though it is exported as JPEG. For example, a image/x-canon-cr2 is exported as JPEG, but the exported file still has a .CR2 extension.
Comment 1 Debarshi Ray 2016-10-05 09:20:30 UTC
Created attachment 336969 [details] [review]
base-item: Adjust the extension when exporting