base-item: Adjust the extension when exporting

We export PNGs as PNGs, and anything else is converted to JPEG.
Therefore, we should ensure that the extension matches the exported
content type.

https://bugzilla.gnome.org/show_bug.cgi?id=772443